--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <footer class="container-footer">
         <div>
-            The Zety CV creator isn’t just another curriculum vitae maker you can find online. 
+            The CV creator isn’t just another curriculum vitae maker you can find online. 
             We’re the career toolbox you carry on your way to your dream career. So, let’s get you what you came for.
         </div>
         <div>
