responsive full screen

--- a/index.html
+++ b/index.html
@@ -33,10 +33,40 @@
                 Career Blog <i class="fa-solid fa-caret-down"></i>
             </nav>
             <nav class="header-item">
-                about <i class="fa-solid fa-caret-down"></i>
+                About <i class="fa-solid fa-caret-down"></i>
             </nav>
             <nav class="header-item header-item-my-account">
                 My Account
+            </nav>
+            <nav class="header-item-bars">
+                <ul class="container-header-item-bars-list">
+                    <li class="menu">
+                        <i class="fa-solid fa-bars"></i>
+                        <ul class="header-item-bars-list">
+                            <li>
+                                Tools
+                            </li>
+                            <li>
+                                Resume
+                            </li>
+                            <li>
+                                CV
+                            </li>
+                            <li>
+                                Cover Letter
+                            </li>
+                            <li>
+                                Career Blog
+                            </li>
+                            <li>
+                                About
+                            </li>
+                            <li>
+                                My Account
+                            </li>
+                        </ul>
+                    </li>
+                </ul>   
             </nav>
     </header>
 
