--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </p>
 
                 <p class="button container-button">
-                    <a class="button" href="abcd">CREATE YOUR CV NOW</a>
+                    <a class="button" href="#">CREATE YOUR CV NOW</a>
                 </p>
             </div>
 
@@ -155,15 +155,15 @@
     <div class="container-section-2">
         <div class="item-section-2">
             <img class="section-2-imgs" src="assets/imgs/demo-img-1.png" width="400" height="500">
-                <a class="button-item-section-2" href="abcd">use this template</a>
+                <a class="button-item-section-2" href="#">use this template</a>
         </div>
         <div class="item-section-2">
             <img class="section-2-imgs"  src="assets/imgs/demo-img-2.png" width="400" height="500">
-                <a class="button-item-section-2" href="abcd">use this template</a>
+                <a class="button-item-section-2" href="#">use this template</a>
         </div>
         <div class="item-section-2">
             <img class="section-2-imgs" src="assets/imgs/demo-img-3.png" width="400" height="500">
-                <a class="button-item-section-2" href="abcd">use this template</a>
+                <a class="button-item-section-2" href="#">use this template</a>
         </div>
     </div>
 
@@ -175,7 +175,7 @@
 
     <div class="section-3-button">
         <p class="button container-button">
-            <a class="button" href="abcd">CREATE YOUR CV NOW</a>
+            <a class="button" href="#">CREATE YOUR CV NOW</a>
             
         </p>
     </div>
